CSVParser getEncoding fix